--- a/AI-102/lp02-m02.md
+++ b/AI-102/lp02-m02.md
@@ -1,11 +1,11 @@
-# モジュール2 Cognitive Servicesの保護
+# モジュール2 Azure AI Servicesの保護
 
 
 - 認証
   - キー認証
   - トークン認証
-  - Azure Active Directory認証
-  - [ラボ02 Cognitive Service + Key Vault](lab02cs.md)
+  - Entra ID認証
+  - [ラボ02 Azure AI Service + Key Vault](lab02cs.md)
 - ネットワーク アクセスの制限
   - サービスエンドポイント
   - プライベートエンドポイント
@@ -14,17 +14,17 @@
 
 https://learn.microsoft.com/ja-jp/azure/cognitive-services/authentication
 
-アプリがCognitive Servicesを利用する（APIを呼び出す）には、認証が必要。
+アプリがAzure AI Servicesを利用する（APIを呼び出す）には、認証が必要。
 
-つまり、Cognitive Servicesを呼び出すアプリが、自らを「本物のアプリである」（「にせのアプリではない」）ということを証明する必要がある。このプロセスを「認証」という。
+つまり、Azure AI Servicesを呼び出すアプリが、自らを「本物のアプリである」（「にせのアプリではない」）ということを証明する必要がある。このプロセスを「認証」という。
 
 認証には、以下の3方式が利用できる。
 
 - キー認証
 - トークン認証
-- Azure Active Directory認証
+- Entra ID認証
 
-最も安全なのはAzure Active Directory認証である。
+最も安全なのはEntra ID認証である。
 
 PDF資料: [Azureの認証と承認](../SC/pdf/Azureの認証と承認.pdf)
 
@@ -39,7 +39,7 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/authentication?tabs=p
 リソースの「キー」を使用した認証。
 
 ```
-Cognitive Service
+Azure AI Service
 ↑キーで認証
 アプリ
 └キー
@@ -75,7 +75,7 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/authentication?tabs=p
 アプリが、安全とはみなされない環境（エンドユーザーのモバイル端末上など）で稼働している場合に使用される場合がある。
 
 ```
-Cognitive Service
+Azure AI Service
 ↑トークンで認証
 モバイルアプリ
 ↑トークンを取得し、アプリにトークンを渡す
@@ -91,19 +91,19 @@ Cognitive Service
 
 ※URLに含まれる sts は、security token service の略（と思われる）。Azureやその他のクラウドで、STSと呼ばれる仕組みがよく使用される。[参考1 Microsoft ID Platform](https://learn.microsoft.com/ja-jp/azure/active-directory/develop/access-tokens#payload-claims) [参考2 トークンサービス](https://learn.microsoft.com/ja-jp/azure/remote-rendering/how-tos/tokens#token-service-rest-api) [参考3: ストレージアカウントのsas](https://learn.microsoft.com/ja-jp/azure/storage/common/storage-sas-overview)
 
-## Azure Active Directory認証
+## Entra ID認証
 
 https://learn.microsoft.com/ja-jp/azure/cognitive-services/authentication?tabs=powershell#authenticate-with-azure-active-directory
 
 認証に「Azure AD認証」、承認に「Azure RBACロール」を使う方法。
 
-Cognitive Servicesの一部のサービスで対応している。
+Azure AI Servicesの一部のサービスで対応している。
 
-※今後、（Azure全体的に）Azure Active Directory認証への対応が進んでいくと思われる。
+※今後、（Azure全体的に）Entra ID認証への対応が進んでいくと思われる。
 
 ## ラボ
 
-[ラボ02 Cognitive Service + Key Vault](lab02cs.md)
+[ラボ02 Azure AI Service + Key Vault](lab02cs.md)
 
 ## ネットワークアクセスの制御
 
@@ -111,28 +111,28 @@ Azure VM（仮想マシン）を使用して、Azure環境でWindows ServerやLi
 
 VMは「仮想ネットワーク(VNet)」内に配置する必要がある。
 
-Cognitive Serviceのリソースは、「仮想ネットワーク(VNet)」の外に配置される。
+Azure AI Serviceのリソースは、「仮想ネットワーク(VNet)」の外に配置される。
 
 ```
 VNet
 └サブネット
  └VM
   ↓
-Cognitive Servicesのエンドポイント
+Azure AI Servicesのエンドポイント
   ↑
 インターネット
 ```
 
-Cognitive Servicesのリソースのデフォルトのネットワーク設定では、Cognitive Servicesのエンドポイントは、どこからでもアクセスが可能となっている。VNetからも、インターネットからも、アクセスができる。
+Azure AI Servicesのリソースのデフォルトのネットワーク設定では、Azure AI Servicesのエンドポイントは、どこからでもアクセスが可能となっている。VNetからも、インターネットからも、アクセスができる。
 
-ただし、ネットワーク的にアクセスができること（リクエストがリソースに到達すること）と、リクエストがCognitive Servicesで実行されることは別の話。ネットワーク的にアクセスができるからといってリクエストが無条件に実行されるわけではない。リクエストがCognitive Servicesで実行されるには、ネットワーク的にアクセスができることに加えて、上記で説明した「認証」も必要。
+ただし、ネットワーク的にアクセスができること（リクエストがリソースに到達すること）と、リクエストがAzure AI Servicesで実行されることは別の話。ネットワーク的にアクセスができるからといってリクエストが無条件に実行されるわけではない。リクエストがAzure AI Servicesで実行されるには、ネットワーク的にアクセスができることに加えて、上記で説明した「認証」も必要。
 
 ![](images/ss-2023-04-04-09-15-00.png)
 
-「サービスエンドポイント」や「プライベートエンドポイント」を使用して、指定したサブネットからのみ、Cognitive Servicesのエンドポイントにアクセスできるように、設定できる。
+「サービスエンドポイント」や「プライベートエンドポイント」を使用して、指定したサブネットからのみ、Azure AI Servicesのエンドポイントにアクセスできるように、設定できる。
 
 インターネットからのアクセスが不要な場合は、「サービスエンドポイント」や「プライベートエンドポイント」を使用して、エンドポイントにアクセスできるネットワークを限定することで、よりセキュリティを向上させることができる。
 
 PDF資料: [サービスエンドポイントとプライベートエンドポイント](../AZ-104/pdf/mod06/%E3%82%B5%E3%83%BC%E3%83%93%E3%82%B9%E3%82%A8%E3%83%B3%E3%83%89%E3%83%9D%E3%82%A4%E3%83%B3%E3%83%88vs%E3%83%97%E3%83%A9%E3%82%A4%E3%83%99%E3%83%BC%E3%83%88%E3%82%A8%E3%83%B3%E3%83%89%E3%83%9D%E3%82%A4%E3%83%B3%E3%83%88.pdf)
 
-※上記資料では「ストレージアカウント」におけるサービスエンドポイントとプライベートエンドポイントについて説明しているが、「ストレージアカウント」を「Cognitive Services」に置き換えても同じ。
+※上記資料では「ストレージアカウント」におけるサービスエンドポイントとプライベートエンドポイントについて説明しているが、「ストレージアカウント」を「Azure AI Services」に置き換えても同じ。
