--- a/AI-102/lp02-m04.md
+++ b/AI-102/lp02-m04.md
@@ -1,14 +1,18 @@
-# モジュール4 Cognitive Servicesのコンテナー対応
+# モジュール4 Azure AI Servicesのコンテナー対応
 
-## コンテナーとは？
+## コンテナー型仮想化
 
-- [コンテナー(Docker)とは](../AZ-400/mod15.md)
-- [Cognitive Servicesは、コンテナー内でも実行できる。](https://learn.microsoft.com/ja-jp/azure/cognitive-services/cognitive-services-container-support)
+- [コンテナー型仮想化の概要(ITmedia)](https://www.itmedia.co.jp/enterprise/articles/1506/08/news015.html)
+  - 従来型の「サーバー仮想化」に比べて
+    - 軽量: メモリやディスクなどのリソースの消費が少ない。
+    - 高い可搬性（ポータビリティ）: 一度作ったコンテナーはいろいろな場所で実行できる。
+- [コンテナーのサービス(ACI/AKS)解説](../AZ-104-2023/pdf/コンテナーのサービス.pdf)
+- [Azure AI Servicesは、コンテナー内でも実行できる。](https://learn.microsoft.com/ja-jp/azure/cognitive-services/cognitive-services-container-support)
 - メリット
   - データが処理される場所をユーザーが決定できる
-    - オンプレミス上のサーバーでCognitive Servicesコンテナーを実行できる
+    - オンプレミス上のサーバーでAzure AI Servicesコンテナーを実行できる
   - 低遅延
-    - データの発生場所と近い所で、Cognitive Servicesコンテナーによるデータ処理を実行
+    - データの発生場所と近い所で、Azure AI Servicesコンテナーによるデータ処理を実行
   - コンテナーが動くところであればどこでも実行できる
     - Azure Container Instance
     - Azure Kubernetes Service
@@ -16,15 +20,19 @@
     - [Azure IoT Edge](../AZ-305/sql-edge.md)
     - オンプレや他クラウド上のKubernetesクラスター
 
-## Azure Cognitive Servicesのコンテナー
+## Azure AI Servicesのコンテナー
 
-Azure Cognitive Services には、Docker コンテナーのイメージが用意されている。
+Azure AI Services には、Docker コンテナーのイメージが用意されている。
 
 Azure で使用できるものと同じ API を、コンテナーが稼働する任意の環境（例: オンプレミス、Azure、他のクラウド）で実行できる。
 
 ## 対応しているサービス
 
 https://learn.microsoft.com/ja-jp/azure/cognitive-services/cognitive-services-container-support#containers-in-azure-cognitive-services
+
+Azure AI Servicesのすべてのサービス・機能がコンテナーで利用できるわけではないことに注意。
+
+たとえば「視覚サービス（Computer Vision）」のコンテナーでは、OCR（文字の読み取り）には対応しているが、画像の説明文の生成などには対応していない。
 
 ## 課金
 
@@ -39,15 +47,16 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/lang
 ↓ リクエスト↑判定結果
 Docker コンテナー（言語判定をここで実行）
 ↓ 課金情報
-Cognitive Serviceアカウント
+Azure AI Serviceリソース
 ```
 
 具体的には、`billing`と`apikey`
 
 https://learn.microsoft.com/ja-jp/azure/cognitive-services/containers/container-reuse-recipe#reuse-recipe-store-billing-settings-with-container
-
+<!--
 ## ラボ
 
-- [ラボ04 Cognitive Servicesコンテナー](lab04cs.md)
+- [ラボ04 Azure AI Servicesコンテナー](lab04cs.md)
 
+-->
 
