--- a/AI-102/lp02-m01.md
+++ b/AI-102/lp02-m01.md
@@ -102,7 +102,7 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/cognitive-services-ap
 
 ![](images/ss-2023-04-04-08-07-15.png)
 
-- 「言語サービス」の無料リソースを1つ、「音声サービス」の無料サービスを1つ、「資格サービス」の無料リソースを1つ・・・といった作成は可能。
+- 「言語サービス」の無料リソースを1つ、「音声サービス」の無料サービスを1つ、「視覚サービス」の無料リソースを1つ・・・といった作成は可能。
 
 ■リソースの削除について
 
@@ -247,7 +247,7 @@ Azure Key Vault
 言語サービスのリソース
 ```
 
-■講師デモ: 言語サービスを利用してみる
+■講師デモ: 言語サービスを利用する（Language Studio）
 
 Language Studio（ https://language.cognitive.azure.com/ ）を使用すると、作成済みの「言語サービス」リソースを使った操作を簡単に試すことができる。
 
@@ -283,6 +283,18 @@ Resource Name: 作成済みの「言語サービス」の名前を選択。
 
 - 中国語で「ありがとう」: 谢谢
 - フランス語で「今何時？」: Quelle heure est-il
+
+■講師デモ: 言語サービスを利用する（C#プログラム＋SDK）
+
+
+公式ドキュメントの「クイックスタート」の手順に従う。
+https://learn.microsoft.com/ja-jp/azure/ai-services/language-service/language-detection/quickstart?tabs=linux&pivots=programming-language-csharp
+
+※コード例の一部に修正が必要
+```
+// var client = new TextAnalyticsClient(languageEndpoint, languageKey);
+var client = new TextAnalyticsClient(new Uri(languageEndpoint), new AzureKeyCredential(languageKey));
+```
 
 <!--
 ■ ラボの概要
