--- a/AI-102/lp02.md
+++ b/AI-102/lp02.md
@@ -1,8 +1,8 @@
-# ラーニングパス02 Azure Cognitive Services のプロビジョニングと管理
+# ラーニングパス02 Azure AI Services のプロビジョニングと管理
 
 https://learn.microsoft.com/ja-jp/training/paths/provision-manage-azure-cognitive-services/
 
-- [モジュール1 Cognitive Servicesの作成](lp02-m01.md)
-- [モジュール2 Cognitive Servicesの保護](lp02-m02.md)
-- [モジュール3 Cognitive Servicesの監視](lp02-m03.md)
-- [モジュール4 Cognitive Servicesのコンテナー対応](lp02-m04.md)
+- [モジュール1 Azure AI Servicesの作成](lp02-m01.md)
+- [モジュール2 Azure AI Servicesの保護](lp02-m02.md)
+- [モジュール3 Azure AI Servicesの監視](lp02-m03.md)
+- [モジュール4 Azure AI Servicesのコンテナー対応](lp02-m04.md)
