--- a/AI-102/lp04.md
+++ b/AI-102/lp04.md
@@ -1,10 +1,10 @@
-# ラーニングパス04 Azure Cognitive Speech Services を使用し、音声を処理して翻訳する
+# ラーニングパス04 Azure AI Speech Services を使用し、音声を処理して翻訳する
 
 https://learn.microsoft.com/ja-jp/training/paths/process-translate-speech-azure-cognitive-speech-services/
 
 ■このラーニングパスで学習すること
 
-- Azure Cognitive Servicesの「音声サービス」について理解する。
+- Azure AI Servicesの「音声サービス」について理解する。
   - 「音声テキスト変換」: 音声をテキストに変換（文字起こし）
   - 「テキスト読み上げ」: テキストを音声に変換
   - ラボ7/8
@@ -30,7 +30,7 @@ https://prtimes.jp/main/html/rd/p/000000133.000016808.html
 以下のいずれかを使用。
 
 - 「音声」リソース
-- 「Cognitive services マルチサービス アカウント」リソース
+- 「AI services マルチサービス アカウント」リソース
 
 ■Speech Studio
 
@@ -38,7 +38,7 @@ https://aka.ms/speechstudio/
 
 音声サービスのAPIをすばやく試すことができるWebアプリ。
 
-■音声テキスト変換 speech to text
+■音声テキスト変換 speech to text (STT)
 
 https://learn.microsoft.com/ja-jp/azure/cognitive-services/speech-service/speech-to-text
 
@@ -46,7 +46,7 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/speech-service/speech
 
 リアルタイム変換（マイクなど）、またはバッチ変換（ファイルなど）が利用できる。
 
-■テキスト読み上げ text to speech
+■テキスト読み上げ text to speech (TTS)
 
 https://learn.microsoft.com/ja-jp/azure/cognitive-services/speech-service/text-to-speech
 
@@ -96,19 +96,20 @@ https://learn.microsoft.com/ja-jp/training/modules/translate-speech-speech-servi
 
 ■リソース
 
-専用の "音声" リソースまたはマルチサービスの "Cognitive Services" リソースのいずれかを使用。
+専用の "音声" リソースまたはマルチサービスの "AI Services" リソースのいずれかを使用。
 
-
+<!--
 ## ラボ
 
 - [ラボ07 音声の認識と合成](lab07cs.md)
 - [ラボ08 音声の翻訳](lab08cs.md)
+-->
 
 
 
 ■まとめ
 
-- Azure Cognitive Servicesの「音声サービス」について学習しました。
+- Azure AI Servicesの「音声サービス」について学習しました。
   - 「音声テキスト変換」: 音声をテキストに変換（文字起こし）
   - 「テキスト読み上げ」: テキストを音声に変換
 
