--- a/AI-102/lp05.md
+++ b/AI-102/lp05.md
@@ -1,8 +1,8 @@
-# ラーニングパス05 Azure Cognitive Services を使用して「会話言語理解（CLU）」ソリューションを作成する
+# ラーニングパス05 Azure AI Services を使用して「会話言語理解（CLU）」ソリューションを作成する
 
 ■このラーニングパスで学習すること
 
-- Azure Cognitive Servicesの「言語サービス」について（続き）
+- Azure AI Servicesの「言語サービス」について（続き）
   - Language Understanding Intelligent Service (LUIS)
   - 「会話言語理解」（Conversational Language Understanding、CLU）
   - モデル
@@ -113,11 +113,11 @@ https://language.cognitive.azure.com
 
 このWebサイトにアクセスし、画面右上をクリックしてサインインを行う。また、作成済みの「言語リソース」を選択する。
 
+<!--
 ■ ラボ
 
 [ラボ9 「会話言語理解(CLU)」リソースの作成＋アプリの作成](lab09cs.md)
 
-<!--
 以下のラボを連続して実行します。（ラボ10を実施するにはラボ09で作成するモデルが必要です）
 
 - [ラボ09 「会話言語理解(CLU)」リソースの作成](lab09.md)
@@ -128,7 +128,7 @@ https://language.cognitive.azure.com
 
 このラーニングパスでは以下のことを学習しました
 
-- Azure Cognitive Servicesの「言語サービス」
+- Azure AI Servicesの「言語サービス」
   - Language Understanding Intelligent Service (LUIS)
   - 「会話言語理解」（Conversational Language Understanding、CLU）
   - モデル
