--- a/AI-102/lp09.md
+++ b/AI-102/lp09.md
@@ -11,7 +11,6 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/computer-vision/conce
 
 たとえば猫の画像を読み込ませると「コンピューターのそばに座っている猫」といった説明文を生成。
 
-
 ■オブジェクトの検出 object detection
 
 https://learn.microsoft.com/ja-jp/azure/cognitive-services/computer-vision/concept-object-detection
@@ -28,7 +27,7 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/computer-vision/conce
 
 画像内のブランド（企業のロゴなど）を検出。
 
-検出されたそれぞれのモノや人物に対し:
+検出されたそれぞれのブランドに対し:
 - ブランド名を生成。
 - 座標を生成(top/left/width/height)。
 
