--- a/AZ-500/mod03/mod03-02.md
+++ b/AZ-500/mod03/mod03-02.md
@@ -1,7 +1,7 @@
 
 # Microsoft ID プラットフォーム
 
-[概要PDF](https://github.com/hiryamada/notes/blob/main/AZ-204/pdf/mod06/ID%E3%83%97%E3%83%A9%E3%83%83%E3%83%88%E3%83%95%E3%82%A9%E3%83%BC%E3%83%A0%E3%81%A8Graph.pdf)
+[PDF解説資料](../../SC/pdf/Microsoft%20ID%20Platform.pdf)
 
 ドキュメント
 https://docs.microsoft.com/ja-jp/azure/active-directory/develop/
@@ -230,6 +230,8 @@ https://docs.microsoft.com/ja-jp/graph/tutorials
 
 
 # マネージド ID
+
+([PDF解説資料](../../SC/pdf/Azureの認証と承認.pdf))
 
 https://docs.microsoft.com/ja-jp/azure/active-directory/managed-identities-azure-resources/overview
 
