--- a/AI-102/lp02-m01.md
+++ b/AI-102/lp02-m01.md
@@ -290,10 +290,45 @@ Resource Name: 作成済みの「言語サービス」の名前を選択。
 公式ドキュメントの「クイックスタート」の手順に従う。
 https://learn.microsoft.com/ja-jp/azure/ai-services/language-service/language-detection/quickstart?tabs=linux&pivots=programming-language-csharp
 
-※コード例の一部に修正が必要
+※リソース作成/環境変数設定
+
+```bash
+name=lang`date|md5sum|head -c6`
+location=japaneast
+az group create -n $name -l $location
+az cognitiveservices account create -n $name -g $name --kind TextAnalytics --sku S -l $location --yes
+key=`az cognitiveservices account keys list -n $name -g $name --query 'key1' -otsv`
+setx LANGUAGE_ENDPOINT "https://$location.api.cognitive.microsoft.com/"
+setx LANGUAGE_KEY "$key"
 ```
-// var client = new TextAnalyticsClient(languageEndpoint, languageKey);
-var client = new TextAnalyticsClient(new Uri(languageEndpoint), new AzureKeyCredential(languageKey));
+
+※プロジェクト作成
+
+```bash
+dotnet new console
+dotnet add package Azure.AI.TextAnalytics --version 5.3.0
+```
+
+※コード例
+
+```c#
+using Azure;
+using Azure.AI.TextAnalytics;
+
+// エンドポイントを環境変数から取得
+var endpoint = Environment.GetEnvironmentVariable("LANGUAGE_ENDPOINT") ?? "";
+
+// キーを環境変数から取得
+var key = Environment.GetEnvironmentVariable("LANGUAGE_KEY") ?? "";
+
+// クライアントを作成
+var client = new TextAnalyticsClient(new Uri(endpoint), new AzureKeyCredential(key));
+
+// 言語の検出
+DetectedLanguage result = client.DetectLanguage("bonjour");
+
+// 検出結果を表示
+Console.WriteLine(result.Name);
 ```
 
 <!--
@@ -314,8 +349,7 @@ var client = new TextAnalyticsClient(new Uri(languageEndpoint), new AzureKeyCred
 - Azure AI Servicesのリソースエンドポイントとキーについて確認しました。
 - Azure AI Servicesの「言語サービス」リソースを作りました
 - 「Language Studio」から「言語サービス」を利用できることを確認しました(言語の特定)
-- Azure AI Servicesの「マルチサービスアカウント」リソースを作りました
-- C#プログラムから「マルチサービスアカウント」リソースを利用しました(言語の特定)
+- C#プログラムから「言語サービス」リソースを利用しました(言語の特定)
 
 <!--
 なおAzure AI Servicesのリソースは特に削除しなくても（作成したままでも）コスト的には問題ありません。
