--- a/AI-102/lp02-m01.md
+++ b/AI-102/lp02-m01.md
@@ -296,9 +296,9 @@ https://learn.microsoft.com/ja-jp/azure/ai-services/language-service/language-de
 name=lang`date|md5sum|head -c6`
 location=japaneast
 az group create -n $name -l $location
-az cognitiveservices account create -n $name -g $name --kind TextAnalytics --sku S -l $location --yes
+az cognitiveservices account create -n $name -g $name --kind TextAnalytics --sku S -l $location --custom-domain $name --yes
 key=`az cognitiveservices account keys list -n $name -g $name --query 'key1' -otsv`
-setx LANGUAGE_ENDPOINT "https://$location.api.cognitive.microsoft.com/"
+setx LANGUAGE_ENDPOINT "https://$name.cognitiveservices.azure.com"
 setx LANGUAGE_KEY "$key"
 ```
 
