--- a/AI-3016-ai-studio/m03.md
+++ b/AI-3016-ai-studio/m03.md
@@ -1,1 +1,111 @@
-# Azure AI Studio で言語モデル アプリを開発するためのプロンプト フローの概要
+# Azure AI Studio で言語モデル アプリを開発するためのPrompt flowの概要
+
+https://learn.microsoft.com/ja-jp/training/modules/get-started-prompt-flow-ai-studio/
+
+## Prompt flow
+
+正式名称は「Azure Machine Learning prompt flow」。
+
+LLM アプリケーションの開発、テスト、調整(tune)、デプロイを行うためのツール。
+
+Azure Machine Learning Studio ( https://ml.azure.com/ ) と Azure AI Studio ( https://ai.azure.com/ )からアクセスできる。
+
+条件分岐なども可能 https://learn.microsoft.com/en-us/azure/machine-learning/prompt-flow/how-to-develop-flow?view=azureml-api-2#enable-conditional-control-to-the-flow
+
+## つづり
+
+英語原文において「prompt flow」自体は基本的に小文字で書かれる。文章の冒頭では「Prompt flow」と書かれる。
+
+例: 
+- Azure Machine Learning **prompt flow** is a development tool designed to streamline the entire development cycle of AI applications powered by Large Language Models (LLMs).
+- **Prompt flow** open source project in GitHub.
+- **Prompt flow** SDK and CLI for seamless flow execution and integration with CI/CD pipeline.
+
+（**PromptFlow** や **Prompt Flow** ではない。）
+
+## 参考: ローカルで動く Prompt flow
+
+https://github.com/microsoft/promptflow
+
+https://microsoft.github.io/promptflow/
+
+クラウドではなくローカルで開発ができる。Visual Studio Codeの拡張機能がある。
+
+インストール後は `pf` コマンドを使用。
+
+現在のところ Python で開発ができるが、.NET(C#) / Java 版も開発中の模様。 https://github.com/microsoft/promptflow/discussions/985
+
+AzureのPrompt flowは「クラウドバージョンのPrompt flow」と説明されている。複数の開発者のコラボレーションが必要な場合はクラウドバージョンを使用する。
+
+ローカルで開発した Prompt flow をAzureにインポートできる。https://zenn.dev/headwaters/articles/f49b578cda77da
+
+## Prompt flow の構造
+
+https://learn.microsoft.com/en-us/azure/machine-learning/prompt-flow/concept-flows
+
+```
+Prompt flow ... プラットフォーム, しくみ。ローカルまたはAzureで動かせる。
+└Flow(s) ... 特定のタスクまたは機能を達成するためのアクションまたはステップ。
+  └Tool(s)
+```
+
+Prompt flow のユーザー（Prompt flowを使用するLLMアプリ開発者）は flow を開発する。flow は tools によって構成される。
+
+Tool(s)は「ツールノード」とも呼ばれる。
+
+flow はプロンプトを受け取る。
+
+## Flowの種類
+
+https://learn.microsoft.com/en-us/azure/machine-learning/prompt-flow/concept-flows?view=azureml-api-2#flow-types
+
+- Standard flow
+- Chat flow
+- Evaluation flow
+
+## Tools
+
+https://learn.microsoft.com/en-us/azure/machine-learning/prompt-flow/concept-tools
+
+Prompt flowにおける基礎的なビルディングブロック。
+
+- LLM tool ... 生成や要約などを行うためにLLMを呼び出す
+- Python tool ... Pythonコードの実行
+- Prompt tool ... プロンプトの文字列を準備する
+
+## Variants
+
+https://learn.microsoft.com/en-us/azure/machine-learning/prompt-flow/concept-variants
+
+個別の設定を持つツール ノードの特定のバージョン
+
+## Connections
+
+https://learn.microsoft.com/en-us/azure/machine-learning/prompt-flow/concept-connections?view=azureml-api-2#connections
+
+- Azure OpenAI
+- OpenAI
+- Azure Content Safety
+- Azure AI Search
+- Serp
+- Custom (Python)
+
+## Compute session
+
+コンピューティング セッションには、組み込みのツールを含む事前構築済みの Docker イメージが備わっており、必要なすべてのツールをすぐに実行できます。 
+
+コンピューティング セッションは Azure Machine Learning によって管理され、基盤となるインフラストラクチャを管理する必要なく、フローを実行するための便利で効率的な方法をユーザーに提供します。
+
+## Prompt flowを使用する場合の開発の流れ
+
+https://learn.microsoft.com/ja-jp/training/modules/get-started-prompt-flow-ai-studio/2-understand-lifecycle
+
+https://learn.microsoft.com/ja-jp/azure/machine-learning/prompt-flow/overview-what-is-prompt-flow?view=azureml-api-2#llm-based-application-development-lifecycle
+
+Azure Machine Learning プロンプト フローは、AI アプリケーションのシームレスな開発を容易にする明確に定義されたプロセスを提供します。 これを活用することで、フローの開発、テスト、チューニング、デプロイの各段階を効果的に進め、最終的に成熟した AI アプリケーションを作成できます。
+
+- 初期化:ユース ケースを定義し、ソリューションを設計します。
+- 実験:フローを開発し、小規模なデータセットでテストします。
+- 評価と調整:より大規模なデータセットを使用してそのフローを評価します。
+- 運用:そのフローとアプリケーションをデプロイして監視します。
+
