--- a/AI-3016-ai-studio/m01.md
+++ b/AI-3016-ai-studio/m01.md
@@ -1,5 +1,22 @@
 # Azure AI Studio の概要
 
+https://learn.microsoft.com/ja-jp/training/modules/introduction-to-azure-ai-studio/
+
+## Azure AI Studioとは？
+
+- Azure Machine Learning、Azure OpenAI Service、その他の Azure AI サービスの機能を 1 つにまとめたワークスペース(Web ポータル)を提供するサービス
+- AI ソリューションを構築できる
+- AIソフトウェア開発者向け
+- 開発者がデータサイエンティストなどと共同作業がしやすい
+- Microsoft Fabric データストア レイクハウス内のデータにシームレスにアクセスできる。
+- ChatGPT 以外のモデルも利用できる。
+
+## 料金
+
+Azure AI Studio の利用自体には料金はかからない。
+
+ただし、Azure AI Studioの中で使用されるAzureリソースについては、それぞれ料金がかかる。
+
 ## ハブ
 
 AI Studio の主要な最上位レベルの Azure リソース。
@@ -8,18 +25,28 @@ AI Studio の主要な最上位レベルの Azure リソース。
 
 データコネクションなどの「アーティファクト」が共有される。
 
+- ストレージアカウント
+- Azure Key Vault
+
 運用方法
 
 - IT 部門は、チーム用に事前構成された再利用可能な環境 (ハブ) を 1 回で設定できます。 
 - その後、チームはそのハブを使用して、AI アプリケーションのプロトタイプ作成、構築、運用のための独自のプロジェクトを作成できます。
 
+ハブのリソースのType: `Microsoft.MachineLearningServices/workspaces`, Kind: `Hub` である。
 
+https://learn.microsoft.com/ja-jp/azure/machine-learning/concept-hub-workspace?view=azureml-api-2
 
 ## プロジェクト
 
 
 プロジェクトは、カスタマイズされた AI アプリの構築中に作業を整理し、状態を保存するために使用されます。
 
+ハブのリソースのType: `Microsoft.MachineLearningServices/workspaces`, Kind: `Project` である。
+
+Azure Machine Learning的には「（プロジェクト）ワークスペース」である。
+
+https://learn.microsoft.com/ja-jp/azure/machine-learning/concept-workspace?view=azureml-api-2
 
 ## メニューの対比
 
