--- a/AI-3016-ai-studio/m03.md
+++ b/AI-3016-ai-studio/m03.md
@@ -23,6 +23,11 @@ Azure Machine Learning Studio ( https://ml.azure.com/ ) と Azure AI Studio ( ht
 
 （**PromptFlow** や **Prompt Flow** ではない。）
 
+オープンソースのプロジェクトのリポジトリ名は `microsoft/promptflow`である。
+
+大文字Prompt flowが小文字のprompt flowに修正されたコミット:
+https://github.com/microsoft/promptflow/commit/a12825faa094f4488765f2fafba319dc7422b4dd
+
 ## 参考: ローカルで動く Prompt flow
 
 https://github.com/microsoft/promptflow
