--- a/MS-4009-copilot-studio/m02.md
+++ b/MS-4009-copilot-studio/m02.md
@@ -1,4 +1,25 @@
-# Copilot Studio アクションの概要
+# モジュール2 Copilot Studio アクションの概要
+
+https://learn.microsoft.com/ja-jp/training/modules/get-started-copilot-studio-actions/
+
+## 独自のプラグイン（アクション）によるCopilot拡張
+
+https://learn.microsoft.com/ja-jp/microsoft-365-copilot/extensibility/overview-business-applications#create-plugins
+
+Microsoft Copilot Studioを使用して、独自のプラグイン（アクション）を開発できる。
+
+- 会話プラグイン
+  - (「会話アクション」とも)
+  - モジュール3で詳しく解説
+- プロンプトプラグイン 
+  - (「プロンプトアクション」とも)
+  - モジュール4で詳しく解説
+- コネクタプラグイン
+  - (「コネクタアクション」とも)
+  - モジュール5で詳しく解説
+
+https://learn.microsoft.com/ja-jp/microsoft-copilot-studio/copilot-plugins-overview#handlers-and-content-sources---action-types
+
 
 ## アクション
 
