--- a/MS-4009-copilot-studio/m04.md
+++ b/MS-4009-copilot-studio/m04.md
@@ -1,4 +1,4 @@
-# Copilot Studio で Microsoft Copilot for Microsoft 365 のコネクタ アクションを作成する
+# モジュール4 Copilot Studio で Microsoft Copilot for Microsoft 365 のコネクタ アクションを作成する
 
 https://learn.microsoft.com/ja-jp/training/modules/create-connector-actions-microsoft-copilot-microsoft-365-copilot-studio/1-introduction
 
