--- a/AI-102/lp01.md
+++ b/AI-102/lp01.md
@@ -163,7 +163,8 @@ AI Serviceアカウント
 
 → 詳しくは後ほど [ラーニングパス12](lp12.md) で解説。
 
-※本コース「AI-102」では、Azure OpenAI Serviceの概要のみ解説する。Azure OpenAI Serviceについては「AI-050」コースで解説。
+
+OpenAI社が開発したGPTなどの大規模言語モデルをAzure上で利用できるサービス。生成AIを活用したアプリを開発できる。
 
 ■Azure Bot Serviceとは？
 
