--- a/AI-102/lp02-m04.md
+++ b/AI-102/lp02-m04.md
@@ -36,7 +36,7 @@ Azure AI Servicesのすべてのサービス・機能がコンテナーで利用
 
 ## 課金
 
-コンテナーには「課金引数」を指定する必要がある。
+コンテナーには「課金引数」と呼ばれる2つの環境変数（`billing`と`apikey`）を指定する必要がある。
 
 （コンテナー内のサービスの使用状況が「課金引数」で指定した場所へと送信される）
 
@@ -49,8 +49,6 @@ Docker コンテナー（言語判定をここで実行）
 ↓ 課金情報
 Azure AI Serviceリソース
 ```
-
-具体的には、`billing`と`apikey`
 
 https://learn.microsoft.com/ja-jp/azure/cognitive-services/containers/container-reuse-recipe#reuse-recipe-store-billing-settings-with-container
 <!--
