--- a/AI-050-2024/AI-102.md
+++ b/AI-050-2024/AI-102.md
@@ -11,3 +11,7 @@ https://learn.microsoft.com/ja-jp/training/paths/develop-ai-solutions-azure-open
 - モジュール7: 責任あるAIの基礎
   - [生成AIの潜在的リスク](responsive-generative-ai.md)
   - [Azure OpenAI Serviceのコンテンツフィルター](content-filtering.md)
+
+## GraphRAG
+
+- [GraphRAG](GraphRAG/README.md)
