--- a/AI-102/lp11.md
+++ b/AI-102/lp11.md
@@ -6,7 +6,6 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-knowledge-mining-azur
 
 - [概要](azure-ai-search/overview.md)
   - Azure AI Searchとは
-  - 価格レベル
   - 検索インデックス
   - データソース
   - フルテキスト検索: 基本の検索方式
@@ -14,18 +13,22 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-knowledge-mining-azur
   - ファセットナビゲーション: 検索結果を絞り込む
   - フィールド属性: インデックスの作成方法を指定
   - AIエンリッチメント: Azure AI Servicesを使って検索性を高める
+- [価格レベル](price.md) リソース作成時に「価格レベル」(pricing tier)を選択。変更不可。
+- [スケーリング](azure-ai-search/scaling.md)
+  - パフォーマンスや可用性を高める方法
+- [ネットワーク設定](azure-ai-search/network.md) 「パブリック」または「プライベート」（プライベートエンドポイント）を選択。
 - [セマンティック ランキング](azure-ai-search/semantic-ranking.md) 2022/10 パブリックプレビュー
   - 検索結果を関連性の高い順に並び替える
 - [ベクトルとは？](azure-ai-search/vector.md)
   - ベクトル検索を理解するための前知識
-- [ベクトル検索](azure-ai-search/vector-search.md) 2023/7/18 パブリックプレビュー
-  - より精度の高い検索方式
-- [統合ベクトル検索](azure-ai-search/integrated-vectorization.md) 2023/11/15 パブリックプレビュー
+- [ベクトル検索](azure-ai-search/vector-search.md)
+  - 2023/7/18 パブリックプレビュー, 2023/11/15 一般提供開始
+  - 検索クエリと意味的に類似した情報を検索
+  - より精度の高い検索を可能とする方式
+- [統合ベクトル検索](azure-ai-search/integrated-vectorization.md)
+  - 2023/11/15 パブリックプレビュー
   - インデックス作成とクエリ実行において、自動でベクトルが使われる
   - インデックス作成時に自動でチャンク分割が行われる
-- [スケーリング](azure-ai-search/scaling.md)
-  - パフォーマンスや可用性を高める方法
-- [ネットワーク設定](azure-ai-search/network.md)
 - [スキル](azure-ai-search/skill.md)
   - AIエンリッチメントを実現するしくみ
 - [カスタムスキル](azure-ai-search/custom-skill.md)
