--- a/MS-4009-copilot-studio/m01.md
+++ b/MS-4009-copilot-studio/m01.md
@@ -8,27 +8,46 @@ https://learn.microsoft.com/ja-jp/training/modules/microsoft-copilot-extensibili
 https://learn.microsoft.com/en-us/microsoft-365-copilot/extensibility/
 -->
 
-## なぜ Copilotを拡張するのか？ Copilotを拡張すると何ができるのか？
+## 「Microsoft 365 Copilot」と「Copilot エージェント」
 
-## 「拡張」はどこで使用できるのか？
+- 「Microsoft 365 Copilot」
+  - Word, Excel, PowerPoint, Teamsなどに組み込まれたコパイロット
+  - Microsoft 365とともに、すぐに使用できる
+  - 特にカスタマイズされていない
+- 「Copilot エージェント」
+  - 「Microsoft 365 Copilot」を拡張したもの
+  - 特定のスコープに特化した知識やスキルを持つ
+    - 例: 「出張エージェント」
+      - 出張に関する質問に答える
+      - 出張の手配を支援（自動化）する
+  - 開発者が「Microsoft Copilot Studio」などを使用して作成する
 
-Microsoft Teams内のCopilot（チャット）で使用できる。
+## 「Copilot エージェント」はどこで使用できるのか？
 
-## どのように拡張するのか？
+BizChat（Microsoft Teams内のCopilotの画面）などで使用できる。
 
-- Graphコネクタ
-- 宣言型コパイロット(Declarative copilots)
-- プラグイン
-  - APIプラグイン
-  - メッセージ拡張機能
-  - Copilot Studioの「アクション」
-    - 会話アクション
-    - プロンプトアクション
-    - コネクタアクション
+## 参考: 拡張の方法
+
+![alt text](image-29.png)
+
+- コネクタ
+  - [Graphコネクタ](https://learn.microsoft.com/ja-jp/microsoft-365-copilot/extensibility/#graph-connectors)
+  - [Power Platformコネクタ](https://learn.microsoft.com/ja-jp/microsoft-365-copilot/extensibility/#power-platform-connectors)
+- [プラグイン](https://learn.microsoft.com/ja-jp/microsoft-365-copilot/extensibility/#plugins)
+  - [APIプラグイン](https://learn.microsoft.com/ja-jp/microsoft-365-copilot/extensibility/overview-api-plugins)
+  - [メッセージ拡張機能](https://learn.microsoft.com/ja-jp/microsoft-365-copilot/extensibility/overview-message-extension-bot)
+  - [Copilot Studioの「アクション」](https://learn.microsoft.com/ja-jp/microsoft-copilot-studio/copilot-plugins-overview#extend-a-microsoft-copilot-with-an-action)
+    - [会話アクション](https://learn.microsoft.com/ja-jp/microsoft-copilot-studio/copilot-conversational-plugins)
+    - [プロンプトアクション](https://learn.microsoft.com/ja-jp/microsoft-copilot-studio/microsoft-copilot-extend-action-prompt)
+    - [コネクタアクション](https://learn.microsoft.com/ja-jp/microsoft-copilot-studio/microsoft-copilot-extend-action-connector)
+
+
+※本コースでは、Copilot Studioの「アクション」のみ説明する。
+
+<!--
+## 参考: 以前の拡張性の図
 
 ![alt text](image-28.png)
-
-本コースでは「プラグイン（アクション）」について解説。
 
 ## プラグインの種類
 
@@ -41,3 +60,4 @@ https://learn.microsoft.com/ja-JP/microsoft-365-copilot/extensibility/#plugins
   - Microsoft Copilot Studio で開発する
   - 次のモジュール（モジュール02）で解説
 
+-->
