--- a/MS-4009-copilot-studio/m02.md
+++ b/MS-4009-copilot-studio/m02.md
@@ -2,48 +2,59 @@
 
 https://learn.microsoft.com/ja-jp/training/modules/get-started-copilot-studio-actions/
 
-## 独自のプラグイン（アクション）によるCopilot拡張
+## Copilot Studio アクション
 
-https://learn.microsoft.com/ja-jp/microsoft-365-copilot/extensibility/overview-business-applications#create-plugins
+「Copilot Studio アクション」は、「Microsoft 365 Copilot」を拡張して「Copilot エージェント」を作成する方法の一つ。
 
-Microsoft Copilot Studioを使用して、独自のプラグイン（アクション）を開発できる。
+Microsoft Copilot Studioを使用して、独自のアクションを開発できる。
 
-- 会話プラグイン
-  - (「会話アクション」とも)
+- プロンプトアクション 
+  - あらかじめ登録しておいた「プロンプト」を使用して、GPTにコンテンツを生成させるアクション
   - モジュール3で詳しく解説
-- プロンプトプラグイン 
-  - (「プロンプトアクション」とも)
+- コネクタアクション
+  - Power PlatformやLogic Appで使用できる「コネクタ」を使用するアクション
   - モジュール4で詳しく解説
-- コネクタプラグイン
-  - (「コネクタアクション」とも)
+- 会話アクション
   - モジュール5で詳しく解説
-
-https://learn.microsoft.com/ja-jp/microsoft-copilot-studio/copilot-plugins-overview#handlers-and-content-sources---action-types
-
-
-## アクション
-
-Microsoft 365 およびその他のファースト パーティ コパイロット向けに Microsoft Copilot を拡張するには、Copilot Studio アクションを構築します。
 
 ## アクションの利用方法
 
-Copilot Studio アクションは、Copilot for Microsoft 365 に付属する組み込みアクションと同様に動作します。
+<!--
+「Copilot Studio アクション」は、Copilot for Microsoft 365 に付属する組み込みアクションと同様に動作する。
+-->
 
-Copilot for Microsoft 365 内で、メッセージ作成メニューの「プラグインアイコン」を選択します。
+Microsoft 365 の Copilot の画面（BizChat）に移動する。
 
+![alt text](image-30.png)
+
+メッセージ作成メニューの「Copilot応答の管理」ボタンをクリックする。
+
+![alt text](image-31.png)
+<!--
 ![alt text](image-6.png)
 
 ※ここではまだ、新しい用語「アクション」ではなく、古い用語「プラグイン」が使用されている。
 
 ![alt text](image-7.png)
+-->
 
-※この、プラグイン（アクション）の有効・無効を切り替えるポップアップのことを「フライアウト」（Flyout）という。https://learn.microsoft.com/ja-jp/windows/apps/design/controls/dialogs-and-flyouts/flyouts
+
+使用したいアクションのスイッチをオンにする。
+
+![alt text](image-32.png)
+
+
+※この、アクションの有効・無効を切り替えるポップアップのことを「フライアウト」（Flyout）という。https://learn.microsoft.com/ja-jp/windows/apps/design/controls/dialogs-and-flyouts/flyouts
 
 
 ## オーケストレーター
 
 https://learn.microsoft.com/ja-jp/microsoft-365-copilot/extensibility/orchestrator?tabs=tasks
 
-ユーザーがプロンプトを入力した際に、「Microsoft Copilot オーケストレーター」が、利用可能なアクションのセットの中から、適切なアクションを決定する。このとき、アクションの「説明」が使用される。
+ユーザーがプロンプトを入力した際に、「Microsoft Copilot オーケストレーター」が、利用可能なアクションのセットの中から、適切なアクションを決定する。
+
+なお、このとき、「Microsoft Copilot オーケストレーター」は、アクションの「説明」に従ってアクションを選択する。したがって、適切なアクションが選択されるようにするためには、アクションの「説明」をきちんと書くことが重要である。
+
+https://learn.microsoft.com/ja-jp/microsoft-365-copilot/extensibility/orchestrator?tabs=tasks#plugin-optimization
 
 
