--- a/MS-4009-copilot-studio/m04.md
+++ b/MS-4009-copilot-studio/m04.md
@@ -1,6 +1,15 @@
-# モジュール4 Copilot Studio で Microsoft Copilot for Microsoft 365 のコネクタ アクションを作成する
+# モジュール4 「コネクタ アクション」を作成する
 
+コネクタ アクションで Microsoft Copilot を拡張する:
+https://learn.microsoft.com/ja-jp/microsoft-copilot-studio/microsoft-copilot-extend-action-connector
+
+<!--
 https://learn.microsoft.com/ja-jp/training/modules/create-connector-actions-microsoft-copilot-microsoft-365-copilot-studio/1-introduction
+-->
+
+## コネクタの一覧
+
+https://learn.microsoft.com/ja-jp/connectors/connector-reference/
 
 ## コネクタとは
 
@@ -10,7 +19,10 @@ Microsoft エコシステム内外の一般的なエンタープライズ サー
 
 カスタム コネクタを作成して、独自のデータ ソースに接続することもできます。
 
-Copilot Studio を使用すると、独自のカスタム コパイロットでこれらのコネクタを使用したり、Copilot for Microsoft 365 や Copilot for Sales などのファースト パーティ コパイロットを拡張したりできます。
+## コネクタ アクションとは
+
+
+Copilot Studio を使用すると、「Copilot Agents」でコネクタを使用したり、Copilot for Microsoft 365 や Copilot for Sales などのファースト パーティ コパイロットを拡張したりできます。
 
 ## コネクタの種類
 
