--- a/MS-4009-copilot-studio/m05.md
+++ b/MS-4009-copilot-studio/m05.md
@@ -1,4 +1,10 @@
-# モジュール5 Copilot Studio で Microsoft Copilot for Microsoft 365 の会話アクションを作成する
+# モジュール5 「会話アクション」を作成する
+
+https://learn.microsoft.com/ja-jp/microsoft-copilot-studio/copilot-conversational-plugins
 
 https://learn.microsoft.com/ja-jp/training/modules/create-conversational-actions-microsoft-copilot-microsoft-365-copilot-studio/
+
+「トピックエディター」で「トピック」を作成する。
+
+「トピック」は、トリガーやアクションを含む。
 
