--- a/MS-4009-copilot-studio/m03.md
+++ b/MS-4009-copilot-studio/m03.md
@@ -1,6 +1,12 @@
-# モジュール3 Copilot Studio で Microsoft Copilot for Microsoft 365 のプロンプト アクションを作成する
+# モジュール3 「プロンプト アクション」を作成する
 
+プロンプト アクションで Microsoft Copilot を拡張する:
+https://learn.microsoft.com/ja-jp/microsoft-copilot-studio/microsoft-copilot-extend-action-prompt
+
+<!--
+Microsoft Learn トレーニングモジュール（英語のみ）:
 https://learn.microsoft.com/ja-jp/training/modules/create-prompt-actions-microsoft-copilot-m365-copilot-studio/
+-->
 
 プロンプトを使用すると、メーカーは、Generative Pre-trained Transformer (GPT) モデルに特定の動作をさせたり、特定のタスクを実行させたりすることができます。
 
