--- a/AZ-500/mod03/mod03-04.md
+++ b/AZ-500/mod03/mod03-04.md
@@ -26,13 +26,14 @@ https://docs.microsoft.com/ja-jp/azure/azure-sql/database/security-overview#auth
   - SQL認証
     - 「サーバー管理者」のユーザー名とパスワードを使った認証
     - 「サーバー」作成時に指定
-  - Azure Active Directory認証
-    - Azure ADのIDを使用した認証
+  - Entra ID認証
+    - Entra IDのIDを使用した認証
 - 承認
   - [データベース レベルのロール](https://docs.microsoft.com/ja-jp/sql/relational-databases/security/authentication-access/database-level-roles?view=sql-server-ver15) を、ユーザーに割り当てる。
   - ALTER ROLE文を使用
   - 注: SQL Serverで使用される [サーバーレベルのロール](https://docs.microsoft.com/ja-jp/sql/relational-databases/security/authentication-access/server-level-roles?view=sql-server-ver15)は、SQL DatabaseやAzure Synapse Analyticsでは使用できない。
 
+<!--
 # SQL Database ファイアウォール
 
 https://docs.microsoft.com/ja-jp/azure/azure-sql/database/security-overview#network-security
@@ -95,6 +96,7 @@ https://docs.microsoft.com/ja-jp/azure/azure-sql/database/service-tiers-dtu
   - バックアップ: 最大35日間保有
   - インメモリOLTPをサポート
   - 列ストアインデックス作成をサポート
+-->
 
 # データの検出と分類
 
@@ -171,9 +173,11 @@ https://docs.microsoft.com/ja-jp/azure/azure-sql/database/azure-defender-for-sql
   - サブスクリプション レベル
   - リソース レベル
 
+<!--
 # ラボ 11: Azure SQL データベースのセキュリティ保護
 
 - 60min
 - Azure Passサブスクリプションを使用します
 - 手順書: https://microsoftlearning.github.io/AZ-500JA-AzureSecurityTechnologies/
 - 補足資料: https://github.com/hiryamada/notes/blob/main/AZ-500/lab/lab11.md
+-->
