--- a/MS-4009-copilot-studio/m01.md
+++ b/MS-4009-copilot-studio/m01.md
@@ -13,18 +13,17 @@ https://learn.microsoft.com/en-us/microsoft-365-copilot/extensibility/
 - 「Microsoft 365 Copilot」
   - Word, Excel, PowerPoint, Teamsなどに組み込まれたコパイロット
   - Microsoft 365とともに、すぐに使用できる
-  - 特にカスタマイズされていない
 - 「Copilot エージェント」
-  - 「Microsoft 365 Copilot」を拡張したもの
-  - 特定のスコープに特化した知識やスキルを持つ
+  - 「Microsoft 365 Copilot」を拡張（カスタマイズ）したもの
+  - 開発者が「Microsoft Copilot Studio」を使用して作成する
+  - 特定のスコープに特化した知識やスキルを持たせることができる
     - 例: 「出張エージェント」
       - 出張に関する質問に答える
       - 出張の手配を支援（自動化）する
-  - 開発者が「Microsoft Copilot Studio」などを使用して作成する
 
 ## 「Copilot エージェント」はどこで使用できるのか？
 
-BizChat（Microsoft Teams内のCopilotの画面）などで使用できる。
+Microsoft Teams内のCopilotの画面など（Business Chat、BizChat）で使用できる。
 
 ## 参考: 拡張の方法
 
