--- a/AZ-2005-sk/m02.md
+++ b/AZ-2005-sk/m02.md
@@ -15,6 +15,20 @@ https://learn.microsoft.com/ja-JP/semantic-kernel/concepts/plugins/?pivots=progr
 
 Semantic Kernel SDK には、アプリケーション内ですぐに使用できる一般的なタスク用の組み込みプラグインもいくつか用意されている。
 
+`TimePlugin` https://learn.microsoft.com/en-us/dotnet/api/microsoft.semantickernel.plugins.core.timeplugin?view=semantic-kernel-dotnet
+
+`ConversationSummaryPlugin` https://learn.microsoft.com/en-us/dotnet/api/microsoft.semantickernel.plugins.core.conversationsummaryplugin?view=semantic-kernel-dotnet
+
+`HttpPlugin` https://learn.microsoft.com/en-us/dotnet/api/microsoft.semantickernel.plugins.core.httpplugin?view=semantic-kernel-dotnet
+
+`FileIOPlugin` https://learn.microsoft.com/en-us/dotnet/api/microsoft.semantickernel.plugins.core.fileioplugin?view=semantic-kernel-dotnet
+
+`MathPlugin` https://learn.microsoft.com/en-us/dotnet/api/microsoft.semantickernel.plugins.core.mathplugin?view=semantic-kernel-dotnet
+
+`TextPlugin` https://learn.microsoft.com/en-us/dotnet/api/microsoft.semantickernel.plugins.core.textplugin?view=semantic-kernel-dotnet
+
+`MsGraph` https://learn.microsoft.com/en-us/dotnet/api/microsoft.semantickernel.plugins.msgraph?view=semantic-kernel-dotnet
+
 ## `TimePlugin` の利用例
 
 https://learn.microsoft.com/en-us/dotnet/api/microsoft.semantickernel.plugins.core.timeplugin?view=semantic-kernel-dotnet
@@ -48,18 +62,6 @@ var result = await kernel.InvokeAsync(
 
 Console.WriteLine(result);
 ```
-
-## その他の組み込みプラグイン
-
-`HttpPlugin` https://learn.microsoft.com/en-us/dotnet/api/microsoft.semantickernel.plugins.core.httpplugin?view=semantic-kernel-dotnet
-
-`FileIOPlugin` https://learn.microsoft.com/en-us/dotnet/api/microsoft.semantickernel.plugins.core.fileioplugin?view=semantic-kernel-dotnet
-
-`MathPlugin` https://learn.microsoft.com/en-us/dotnet/api/microsoft.semantickernel.plugins.core.mathplugin?view=semantic-kernel-dotnet
-
-`TextPlugin` https://learn.microsoft.com/en-us/dotnet/api/microsoft.semantickernel.plugins.core.textplugin?view=semantic-kernel-dotnet
-
-`MsGraph` https://learn.microsoft.com/en-us/dotnet/api/microsoft.semantickernel.plugins.msgraph?view=semantic-kernel-dotnet
 
 ## プラグインのパッケージ
 
