--- a/AZ-700/m01.md
+++ b/AZ-700/m01.md
@@ -31,3 +31,14 @@
 ■Virtual Network NAT (NAT gateway)
 
 - 講義: [Virtual Network NAT (NAT gateway)](nat-gateway.md)
+
+■ネットワークセキュリティグループ(NSG)
+
+- 講義: [仮想ネットワークの概要(PDF)](../AZ-104-2023/pdf/仮想ネットワークの概要.pdf)
+
+<!--
+■プライベートサブネット
+
+- 講義: [規程の送信アクセスの廃止](default-outbound-access.md)
+- 講義: [プライベートサブネット](private-subnet.md)
+-->
