--- a/AZ-700/m04.md
+++ b/AZ-700/m04.md
@@ -2,6 +2,7 @@
 
 ■Azureの負荷分散サービス
 
+- [Azureの負荷分散サービス まとめ](../AZ-104-2023/pdf/Azureの負荷分散サービスまとめ.pdf)
 - [Azureの負荷分散サービス](../AZ-500/pdf/mod2/負荷分散サービス.pdf)
 - Azure portalでの負荷分散サービスの選択（デモ）
 
