--- a/AZ-700/m01.md
+++ b/AZ-700/m01.md
@@ -3,9 +3,10 @@
 ■仮想ネットワーク(VNet)
 
 - 講義:
+  - PDF資料: [ハブ&スポーク トポロジー](../network/ハブ・スポーク.pdf)
+  - PDF資料: [仮想ネットワークの概要](../AZ-104-2023/pdf/仮想ネットワークの概要.pdf)
   - [仮想ネットワーク](../network/vnet.md)
   - [サブネット](../network/subnet.md)
-  - PDF資料: [ハブ&スポーク トポロジー](../network/ハブ・スポーク.pdf)
 - ラボ: [M01-ユニット4 Azure で仮想ネットワークを設計および実装する](lab-m01-u04.md)
 
 ■パブリック/プライベートIPアドレス
@@ -30,11 +31,15 @@
 
 ■Virtual Network NAT (NAT gateway)
 
-- 講義: [Virtual Network NAT (NAT gateway)](nat-gateway.md)
+- [Virtual Network NAT (NAT gateway)](nat-gateway.md)
+- [NAT Gatewayの運用パターン](nat-gateway/nat-gateway-pattern.md)
+- [2025年9月30日以降、新規デプロイされたVMの既定のアウトバウンドアクセスが廃止となる](https://learn.microsoft.com/ja-jp/azure/virtual-network/ip-services/default-outbound-access)
+  - NAT Gatewayなどを使用して明示的にアウトバウンドアクセス経路を用意する必要がある
 
-■ネットワークセキュリティグループ(NSG)
+■ネットワークセキュリティグループ(NSG) ／ アプリケーションセキュリティグループ(ASG)
 
-- 講義: [仮想ネットワークの概要(PDF)](../AZ-104-2023/pdf/仮想ネットワークの概要.pdf)
+- [NSG](../network/nsg.md)
+- [ASG](../network/asg.md)
 
 <!--
 ■プライベートサブネット
