--- a/AI-3004-vision/AI-102.md
+++ b/AI-3004-vision/AI-102.md
@@ -7,3 +7,14 @@ https://learn.microsoft.com/ja-jp/training/paths/create-computer-vision-solution
 - [顔を検出、分析、認識する](lp03-face.md)
 - [画像やドキュメント内のテキストを読み取る](lp04-read-text.md)
 - [動画を分析する](lp05-analyze-video.md)
+
+<!--
+
+画像を分析する
+画像内のテキストを読む
+顔を検出して分析する 
+画像を分類する
+ビジョン対応のチャットアプリを開発する 
+AIで画像を生成する
+
+-->
